Creando elementos desde JSON-SERVER

--- a/index.html
+++ b/index.html
@@ -93,60 +93,18 @@
             </ul>
           </div>
           <div class="productos--lista">
-            <div class="lista--container flex">
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p4">PRECIO: USD 15</p>
-                <p class="producto--categoria p4">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
-              </div>
-              <div class="producto--item--container flex">
-                <div class="producto--img flex p3"></div>
-                <p class="producto--titulo p1">Titulo producto</p>
-                <p class="producto--precio p2">PRECIO: USD 15</p>
-                <p class="producto--categoria">CAJALOCA</p>
+            <div class="card--container flex">
+              <div class="card--item flex">
+                <div class="card--img--div flex">
+                  <img
+                    src="https://static.wixstatic.com/media/dabb89_cb3ad1483f284dadb9cee540f0eb7788~mv2.jpg/v1/fill/w_764,h_764,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/dabb89_cb3ad1483f284dadb9cee540f0eb7788~mv2.jpg"
+                    alt=""
+                    class="card--img"
+                  />
+                </div>
+                <p class="card--titulo p1">Titulo producto</p>
+                <p class="card--precio p4">PRECIO: USD 15</p>
+                <p class="card--categoria p4">CAJALOCA</p>
               </div>
             </div>
           </div>
@@ -251,6 +209,7 @@
         </div>
       </footer>
     </main>
-    <script src="./assets/app/app.js" type="module"></script>
+    <script src="./services/app.js" type="module"></script>
+    <!-- <script src="./controllers/productos-controller.js" type="module"></script> -->
   </body>
 </html>
