--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <link rel="stylesheet" href="./assets/css/CssApp/spinner.css" />
     <link rel="stylesheet" href="./assets/css/CssApp/navEfects.css" />
+    <link rel="stylesheet" href="./assets/css/CssApp/productosEfects.css" />
   </head>
   <!-- <script src="./assets/app/load.js" type="module"></script> -->
   <body>
@@ -83,30 +84,31 @@
               <p class="productos--p1 p1">PRODUCTOS</p>
             </div>
             <ul class="productos--ul flex">
-              <li class="productos--li producto__li1 p3 flex">LETRAS 3D</li>
-              <li class="productos--li producto__li2 p3 flex">PAPACRAFT</li>
-              <li class="productos--li producto__li3 p3 flex">BOX Clasico</li>
-              <li class="productos--li producto__li4 p3 flex">BOX Acetato</li>
-              <li class="productos--li producto__li5 p3 flex">BOX Interactivo</li>
-              <li class="productos--li producto__li6 p3 flex">BOX Tematico</li>
-              <li class="productos--li producto__li7 p3 flex">DECORACIONES</li>
+              <li class="productos--li producto__lihover producto__li1 flex">
+                <a class="p3 flex" href="">LETRAS 3D</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li2 flex">
+                <a class="p3 flex" href="">PAPACRAFT</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li3 flex">
+                <a class="p3 flex" href="">BOX Clasico</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li4 flex">
+                <a class="p3 flex" href="">BOX Acetato</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li5 flex">
+                <a class="p3 flex" href="">BOX Interactivo</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li6 flex">
+                <a class="p3 flex" href="">BOX Tematico</a>
+              </li>
+              <li class="productos--li producto__lihover producto__li7 flex">
+                <a class="p3 flex" href="">DECORACIONES</a>
+              </li>
             </ul>
           </div>
           <div class="productos--lista">
-            <div class="card--container flex">
-              <div class="card--item flex">
-                <div class="card--img--div flex">
-                  <img
-                    src="https://static.wixstatic.com/media/dabb89_cb3ad1483f284dadb9cee540f0eb7788~mv2.jpg/v1/fill/w_764,h_764,al_c,q_85,usm_1.20_1.00_0.01,enc_auto/dabb89_cb3ad1483f284dadb9cee540f0eb7788~mv2.jpg"
-                    alt=""
-                    class="card--img"
-                  />
-                </div>
-                <p class="card--titulo p1">Titulo producto</p>
-                <p class="card--precio p4">PRECIO: USD 15</p>
-                <p class="card--categoria p4">CAJALOCA</p>
-              </div>
-            </div>
+            <div class="card--container flex"></div>
           </div>
         </div>
       </section>
