agregados item de categorias e corregido index de css

--- a/index.html
+++ b/index.html
@@ -211,7 +211,23 @@
         </div>
       </footer>
     </main>
+    <div class="card--emergente flex">
+      <div class="emergente--container flex">
+        <img class="emergente--img" src="" alt="" />
+        <div class="emergente--div flex">
+          <p class="emergente--titulo">sarasa</p>
+          <p class="emergente--descrip">
+            esta es una explicacion del item que estas vendiendo por lo tanto el tecto que yo estoy poniedo carecera de
+            sentido y solo sera para rellenar a modo de simulacion de que el elemento existe
+          </p>
+          <div class="emergente--div--interno">
+            <p class="emergente--categoria">CATEGORIA: LETRAS 3D</p>
+            <p class="emergente--tam">TAMAÑO: medidas que vamos a pasar</p>
+            <p class="emergente--precio">PRECIO: $duricimo</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./services/app.js" type="module"></script>
-    <!-- <script src="./controllers/productos-controller.js" type="module"></script> -->
   </body>
 </html>
