Preparado para conectar a firebase

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./assets/css/CssApp/navEfects.css" />
     <link rel="stylesheet" href="./assets/css/CssApp/productosEfects.css" />
   </head>
-  <!-- <script src="./assets/app/load.js" type="module"></script> -->
+  <script src="./assets/app/load.js" type="module"></script>
   <body>
     <header class="header--container flex">
       <div class="header--container--div flex">
